tests/sparql/test_suites/internal/ill-typed/good_queries/values/double.rq
PREFIX : <http://www.path.com/>
SELECT ?o (STR(?o) AS ?str)
WHERE {
  VALUES (?s ?o) {
    (:1 ""^^xsd:double)
    (:2 "x"^^xsd:double)
    (:3 "asdfasdfasdf"^^xsd:double)
    (:4 "1.5"^^xsd:double)
    (:5 "1"^^xsd:double)
    (:6 1.5E0)
  }
}
ORDER BY ?s
